<resources>
    <string name="app_name">Money Buddy</string>
    <string name="button_label_login">LOGIN</string>
    <string name="login_message">Login successful!</string>
    <string name="login_failed">Username and password do not match</string>
    <string name="blank_name">Name cannot be empty</string>
    <string name="blank_username">Please enter a username</string>
    <string name="blank_pwd">Please enter a password</string>
    <string name="blank_pin">Please enter a PIN </string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pin">PIN</string>
    <string name="enter_button">Enter</string>
    <string name="welcome">WELCOME,</string>
    <string name="signup">SIGN UP</string>
    <string name="signupLabel">CREATE ACCOUNT</string>
    <string name='addToBalance'>Deposit</string>
    <string name='balance'>BALANCE</string>
    <string name='completeDepo'>COMPLETE</string>
    <string name="withdrawalText">Withdraw</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>


</resources>