<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_background3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/dark_gradient"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="276dp"
            android:layout_height="141dp"
            android:alpha="1"
            android:text="@string/signupLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <EditText
            android:id="@+id/registerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/holo_red_dark"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/holo_red_dark"
            android:textCursorDrawable="@android:color/holo_red_dark"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_background3"
            app:layout_constraintVertical_bias="0.357" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_user_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="200dp"
            android:layout_height="69dp"

            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="addUser"

            android:text="@string/signup"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.916"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@android:color/holo_red_dark"
            app:strokeWidth="4dp" />

        <EditText
            android:id="@+id/registerPwdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/holo_red_dark"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/holo_red_dark"
            android:textCursorDrawable="@android:color/holo_red_dark"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_background3"
            app:layout_constraintVertical_bias="0.637" />

        <EditText
            android:id="@+id/registerUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/holo_red_dark"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/holo_red_dark"
            android:textCursorDrawable="@android:color/holo_red_dark"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_background3"
            app:layout_constraintVertical_bias="0.494" />

        <EditText
            android:id="@+id/registerPINText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/holo_red_dark"
            android:ems="10"
            android:hint="@string/pin"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/holo_red_dark"
            android:textCursorDrawable="@android:color/holo_red_dark"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_background3"
            app:layout_constraintVertical_bias="0.762" />

        <!--                      Commented out, as it takes up a bit of space
                <ImageButton      and there are already back buttons at the top and bottoms of the screen
                    android:id="@+id/back_button"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/circle"
                    android:onClick="backToMain"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.096"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.957"
                    app:srcCompat="@drawable/white_back_arrow"
                    app:strokeWidth="4dp" />
        -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>