<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myfirstapp.SecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/login_background2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/dark_gradient"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/holo_red_dark"
            android:textCursorDrawable="@android:color/holo_red_dark"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.469" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/holo_red_dark"
            android:textCursorDrawable="@android:color/holo_red_dark"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/firstscreen_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.434" />

        <Button
            android:id="@+id/firstscreen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:onClick="backToMain"
            android:text="@string/back"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_button" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@android:color/holo_red_dark"
            android:onClick="loginEnter"
            android:text="@string/enter_button"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            app:layout_constraintVertical_bias="0.167" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>